--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ion-icon name="logo-github"></ion-icon>
                </a>
 
-               <a href="https://www.linkedin.com/]in/lucasbombilio/" target="_blank">
+               <a href="https://www.linkedin.com/in/lucasbombilio/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
                </a>
                <a href="https://www.instagram.com/lucasbomgon_/" target="_blank">
