add data, change link pdf

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                <li>
                     <a target="_blank" href="https://www.linkedin.com/in/lucasbombilio/">Inscrever no meu linkedin</a>
                     <li>
-                    <a target="_blank" href="./assets2/crrnovo.pdf">Baixar meu curriculo</a>
+                    <a target="_blank" href="./data/Currículo novo.pdf">Baixar meu curriculo</a>
                     </li>
                     <li>
                     <a href="#">Veja meu portfolio</a>
