add new target li

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a target="_blank" href="./data/Currículo novo.pdf">Baixar meu curriculo</a>
                     </li>
                     <li>
-                    <a href="#">Veja meu portfolio</a>
+                    <a target="_blank" href="https://app.rocketseat.com.br/certificates/a0b7c301-c019-4ccd-a244-e2bc505da5f9">Veja meu certificado</a>
                     </li>
                     <li>
                     <a target="_blank" href="https://www.instagram.com/lucasbomgon_/?next=%2F">Meu instagram</a>
